# opensesame-back

./: Dockerfile  README.md  api.py  db.py  docker-compose.non-linux.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
db_service/: pyproject.toml
db_service/src/: db.py  main.py  migrate_db.py
db_service/src/cruds/: active.py  activity_log.py  door.py  lock.py  lock_log.py  user.py
db_service/src/libs/: unix_time.py
db_service/src/models/: activity_log.py  door.py  lock_log.py  log.py  user.py
db_service/src/routers/: active.py  activity_log.py  door.py  lock.py  lock_log.py  log.py  user.py
db_service/src/schemas/: active.py  activity_log.py  bad_request.py  door.py  lock.py  lock_log.py  user.py
door_lock/: Dockerfile  pyproject.toml
door_lock/src/: door.py  main.py  servo.py  sg92r.py
nfc_activity/: Dockerfile  pyproject.toml
nfc_activity/src/: main.py
nfc_lock/: Dockerfile  pyproject.toml
nfc_lock/src/: main.py
src/: db.py  db_enter_log.py  db_nfc.py  db_user.py  exception.py  main.py  migrate_db.py  schema.py  type_enter_log.py  type_nfc.py  type_schema.py  type_user.py  type_validate.py  validate.py
src/api/: main.py
src/api/routers/: log.py  user.py
src/api/schemas/: log.py  user.py
src/cruds/: log.py  user.py
src/libs/: door.py  read_nfc_id.py  sg92r.py
src/models/: user.py
src/routers/: door.py
src/schemas/: log.py
tests/: test_db_enter_log.py  test_db_nfc.py  test_db_user.py  test_validate.py
