[tool.poetry]
name = "door_lock"
version = "0.1.0"
description = "Access control and smart lock system"
authors = ["salieri256"]

[tool.poetry.dependencies]
python = "^3.10"
pigpio = "^1.78"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
